@@ -249,15 +249,8 @@
                 <version>3.1.2</version>
 
                 <configuration>
-
-                    <forkCount>5</forkCount>
-                    <reuseForks>true</reuseForks>
-                    <argLine>-Dnet.sf.ehcache.disabled=true</argLine>
                     <argLine>
                         @{argLine}
-                        --add-opens module_name/com.myco.project=ALL-UNNAMED
-                        --add-opens module_name/com.myco.project.more=ALL-UNNAMED
-                        --add-opens module_name/com.myco.project.others=ALL-UNNAMED
                         --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
                     </argLine>
                 </configuration>
